# Platformer-Game

./: .gitignore  CMakeCache.txt  CMakeLists  CMakeLists.txt  README.md  TODO.md
include/: Obstacle.h  Platform.h  Player.h
src/: CMakeCache.txt  Obstacle.cpp  Platform.cpp  Player.cpp  main.cpp
